[gd_scene load_steps=3 format=2]

[ext_resource path="res://img/target.png" type="Texture" id=1]
[ext_resource path="res://combat/TargetLineFocus.gd" type="Script" id=2]

[node name="TargetLineFocus" type="TextureRect"]
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 10, 10 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_TargetLineFocus_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TargetLineFocus_mouse_exited"]
